<resources>
    <string name="app_name">SensorLogger</string>

    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown">Unknown</string>
    <string name="error_statistics_recording_is_alive">Can not calculate statistics while sensor is recording events! Stop the recording and try this page again.</string>
    <string name="error_export_recording_is_alive">Can not export data while sensor is recording events! Stop the recording and try this page again.</string>
    <string name="error_statistics_multiple_orientation_in_a_session">There can only be 1 type of Device Orientation in 1 recording session. Error at index %s</string>
    <string name="error_statistics_multiple_position_in_a_session">There can only be 1 type of Device Position in 1 recording session. Error at index %s</string>
    <string name="error_statistics_multiple_activity_in_a_session">There can only be 1 type of Activity Name in 1 recording session. Error at index %s</string>
    <string name="error_statistics_value_is_null">Recorded value is NULL at index %s</string>
    <string name="error_already_calculating">Already Calculating</string>
    <string name="error_already_exporting">Already Exporting</string>

    <string name="sensor_name">Name:</string>
    <string name="sensor_vendor">Vendor:</string>
    <string name="sensor_version">Version:</string>
    <string name="sensor_max_range">Max Range:</string>
    <string name="sensor_resolution">Resolution:</string>
    <string name="sensor_power">Power:</string>
    <string name="sensor_min_delay">Min Delay:</string>
    <string name="sensor_type">Type:</string>
    <string name="sensor_max_delay">Max Delay:</string>
    <string name="sensor_is_wake_up">Wake Up Sensor:</string>
    <string name="sensor_is_dynamic">Dynamic Sensor:</string>
    <string name="sensor_x">X:</string>
    <string name="sensor_y">Y:</string>
    <string name="sensor_z">Z:</string>
    <string name="sensor_value_1">Val 1:</string>
    <string name="sensor_value_2">Val 2:</string>
    <string name="sensor_value_3">Val 3:</string>
    <string name="sensor_value_4">Val 4:</string>
    <string name="sensor_value_5">Val 5:</string>
    <string name="sensor_value_6">Val 6:</string>

    <string name="sensor_single_value">Value:</string>
    <string name="sensor_sampling_period">Sampling Period:</string>
    <string name="sensor_sampling_fastest">Fastest</string>
    <string name="sensor_sampling_game">Game (50Hz)</string>
    <string name="sensor_sampling_ui">UI (16.6Hz)</string>
    <string name="sensor_sampling_normal">Normal (5Hz)</string>
    <string name="sensor_sampling_custom">Custom</string>

    <string name="sensor_category">Category:</string>
    <string name="sensor_accuracy">Accuracy:</string>
    <string name="sensor_accuracy_low">Low</string>
    <string name="sensor_accuracy_medium">Medium</string>
    <string name="sensor_accuracy_high">High</string>
    <string name="sensor_accuracy_unreliable">Unreliable</string>
    <string name="sensor_accuracy_unknown">Unknown</string>
    <string name="sensor_additional_info_supported">Additional Info Supported:</string>
    <string name="activity_name">Activity Name</string>
    <string name="device_position">Device Position</string>
    <string name="device_orientation">Device Orientation</string>
    <string name="start_delay">Start Delay</string>
    <string name="end_delay">End Delay</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="helper_independent">Leave empty if independent</string>
    <string name="milliseconds">milliseconds</string>

    <string name="record_notification_title">Sensor Logger</string>
    <string name="record_notification_content">Recording</string>
    <string name="export_notification_title">Sensor Logger</string>
    <string name="export_notification_content">Exporting</string>
    <string name="exported_notification_content">Export Finished</string>
    <string name="export_failed_notification_content">Export Failed</string>
    <string name="seconds">seconds</string>
    <string name="bottom_nav_sensors">Sensors</string>
    <string name="bottom_nav_statistics">Statistics</string>
    <string name="bottom_nav_export">Export</string>
    <string name="stop_and_ignore_data">Stop And Ignore Data</string>
    <string name="stop_and_ignore">Stop And Ignore</string>
    <string name="delete_exported_folder">Delete Exported Folder</string>
    <string name="export">Export</string>
    <string name="delete_local_data">Delete Local Data</string>
    <string name="exported_successfully">Exported Successfully</string>
    <string name="deleting_export_folder">Deleting export folder</string>
    <string name="deleted_export_folder">Deleted Export Folder</string>
    <string name="already_deleting_export_folder">Already deleting export folder!</string>
    <string name="storage_permission_is_necessary">Storage Permission is Necessary!</string>
    <string name="excluded_accuracies">Excluded Accuracies</string>
    <string name="age">Age</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="gender">Gender</string>
    <string name="deleting_local_data">Deleting Local Data</string>
    <string name="deleted_local_data">Deleted All Local Data</string>
    <string name="sensor_list">Sensor List (%s)</string>
    <string name="error_export_statistics_is_busy">Can not export while statistics is calculating</string>
    <string name="error_delete_local_statistics_is_busy">Can not delete data while statistics is calculating</string>
    <string name="error_statistics_export_is_busy">Can not calculate statistics while exporting data</string>
    <string name="error_recording_statistics_is_busy">Can not record logs statistics while statistics is calculating</string>
    <string name="error_recording_export_is_busy">Can not record logs while exporting data</string>
</resources>
